<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name">指尖书香</string>

    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>

    <string name="register_login">注册/登陆</string>
    <string name="homepage">首页</string>
    <string name="site">站点</string>
    <string name="topic">活动</string>
    <string name="magzine">日刊</string>
    <string name="mine">我的</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="unknown_error">未知错误</string>
    <string name="net_error">网络异常</string>
    <string name="parse_error">解析异常</string>
    <string name="net_disconnect">网络中断，请检查您的网络状态</string>
    <string name="login_success">登录成功</string>
    <string name="login_forgetpass_link">忘记密码?</string>
    <string name="loginwithothers">或使用以下帐号登录</string>
    <string name="validcode">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="phone">手机号</string>
    <string name="passwordtip">密码(最少6位字符数字组合)</string>
    <string name="phone_null">手机号不能为空!</string>
    <string name="phone_invalid">手机号格式不正确!</string>
    <string name="password_null">密码不能为空!</string>
    <string name="password_mismatch">两次密码不一致!</string>
    <string name="password_min_length">密码不能少于6位</string>
    <string name="getcode_fail">获取验证码失败,请重试</string>
    <string name="validcode_null">验证码不能为空</string>
    <string name="nicknametip">取一个容易让人记住的昵称</string>
    <string name="nickname_null">昵称不能为空</string>
    <string name="register_success">注册成功</string>
    <string name="code_invalid">验证码不正确</string>
    <string name="reset_passwd">修改密码</string>
    <string name="restpass_success">修改密码成功</string>
    <string name="tip">提示</string>
    <string name="confirm_exit">确定要注销吗?</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="recom_setting">推荐设置</string>
    <string name="reget">朝花夕拾</string>
    <string name="find_site">发现站点</string>
    <string name="manage_site">站点管理</string>
    <string name="sort_method">排序方式</string>
    <string name="notify_setting">更新提醒</string>
    <string name="mine_center">个人中心</string>
    <string name="find_topic">发现频道</string>
    <string name="manage_topic">管理频道</string>
    <string name="choose_topic" >关注你感兴趣的频道</string>
    <string name="choose_site" >关注你感兴趣的站点</string>
    <string name="enter_direct">跳过</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="focused">已关注</string>
    <string name="unfocus">未关注</string>
    <string name="articlenum">篇文章</string>
    <string name="focurnum">人关注</string>
    <string name="hot">热门</string>
    <string name="recommend">推荐</string>
    <string name="choose_tip">单击增删频道,长按拖拽排序</string>
    <string name="start_load">开始加载</string>
    <string name="load_success">加载完成</string>
    <string name="load_empty">没有更新,去看其他的频道吧</string>
    <string name="large_text">\"Material is the metaphor.\\n\\n\"          \"A material metaphor is the unifying theory of a rationalized space and a system of motion.\"         \"The material is grounded in tactile reality, inspired by the study of paper and ink, yet \"         \"technologically advanced and open to imagination and magic.\\n\"         \"Surfaces and edges of the material provide visual cues that are grounded in reality. The \"         \"use of familiar tactile attributes helps users quickly understand affordances. Yet the \"         \"flexibility of the material creates new affordances that supercede those in the physical \"         \"world, without breaking the rules of physics.\\n\"         \"The fundamentals of light, surface, and movement are key to conveying how objects move, \"         \"interact, and exist in space and in relation to each other. Realistic lighting shows \"         \"seams, divides space, and indicates moving parts.\\n\\n\"          \"Bold, graphic, intentional.\\n\\n\"          \"The foundational elements of print based design typography, grids, space, scale, color, \"         \"and use of imagery guide visual treatments. These elements do far more than please the \"         \"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge \"         \"imagery, large scale typography, and intentional white space create a bold and graphic \"         \"interface that immerse the user in the experience.\\n\"         \"An emphasis on user actions makes core functionality immediately apparent and provides \"         \"waypoints for the user.\\n\\n\"          \"Motion provides meaning.\\n\\n\"          \"Motion respects and reinforces the user as the prime mover. Primary user actions are \"         \"inflection points that initiate motion, transforming the whole design.\\n\"         \"All action takes place in a single environment. Objects are presented to the user without \"         \"breaking the continuity of experience even as they transform and reorganize.\\n\"         \"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. \"         \"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\\n\\n\"          \"3D world.\\n\\n\"          \"The material environment is a 3D space, which means all objects have x, y, and z \"         \"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the \"         \"positive z-axis extending towards the viewer. Every sheet of material occupies a single \"         \"position along the z-axis and has a standard 1dp thickness.\\n\"         \"On the web, the z-axis is used for layering and not for perspective. The 3D world is \"         \"emulated by manipulating the y-axis.\\n\\n\"          \"Light and shadow.\\n\\n\"          \"Within the material environment, virtual lights illuminate the scene. Key lights create \"         \"directional shadows, while ambient light creates soft shadows from all angles.\\n\"         \"Shadows in the material environment are cast by these two light sources. In Android \"         \"development, shadows occur when light sources are blocked by sheets of material at \"         \"various positions along the z-axis. On the web, shadows are depicted by manipulating the \"         \"y-axis only. The following example shows the card with a height of 6dp.\\n\\n\"          \"Resting elevation.\\n\\n\"          \"All material objects, regardless of size, have a resting elevation, or default elevation \"         \"that does not change. If an object changes elevation, it should return to its resting \"         \"elevation as soon as possible.\\n\\n\"          \"Component elevations.\\n\\n\"          \"The resting elevation for a component type is consistent across apps (e.g., FAB elevation \"         \"does not vary from 6dp in one app to 16dp in another app).\\n\"         \"Components may have different resting elevations across platforms, depending on the depth \"         \"of the environment (e.g., TV has a greater depth than mobile or desktop).\\n\\n\"          \"Responsive elevation and dynamic elevation offsets.\\n\\n\"          \"Some component types have responsive elevation, meaning they change elevation in response \"         \"to user input (e.g., normal, focused, and pressed) or system events. These elevation \"         \"changes are consistently implemented using dynamic elevation offsets.\\n\"         \"Dynamic elevation offsets are the goal elevation that a component moves towards, relative \"         \"to the component’s resting state. They ensure that elevation changes are consistent \"         \"across actions and component types. For example, all components that lift on press have \"         \"the same elevation change relative to their resting elevation.\\n\"         \"Once the input event is completed or cancelled, the component will return to its resting \"         \"elevation.\\n\\n\"          \"Avoiding elevation interference.\\n\\n\"          \"Components with responsive elevations may encounter other components as they move between \"         \"their resting elevations and dynamic elevation offsets. Because material cannot pass \"         \"through other material, components avoid interfering with one another any number of ways, \"         \"whether on a per component basis or using the entire app layout.\\n\"         \"On a component level, components can move or be removed before they cause interference. \"         \"For example, a floating action button (FAB) can disappear or move off screen before a \"         \"user picks up a card, or it can move if a snackbar appears.\\n\"         \"On the layout level, design your app layout to minimize opportunities for interference. \"         \"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere \"         \"when a user tries to pick up one of cards.\\n\\n\"</string>
    <string name="get_detial_fail">获取文章失败</string>

</resources>
