<!--
  ~ Copyright (C) 2016 Baidu, Inc. All Rights Reserved.
  -->

<!--menu_main.xml-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
            android:id="@+id/action_find_topic"
            android:title="@string/find_topic"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_manage_topic"
            android:title="@string/manage_topic"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_sort_method"
            android:title="@string/sort_method"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_notify_setting"
            android:title="@string/notify_setting"
            app:showAsAction="never"/>
</menu>
