<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:widget="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_item_height">

                <EditText
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_item_height"
                    android:gravity="bottom"
                    android:orientation="horizontal"
            >
                <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                >

                    <EditText
                            android:id="@+id/et_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/validcode"
                            android:imeActionId="@+id/validcode"
                            android:imeActionLabel="@string/validcode"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>
                <com.material.widget.PaperButton
                        android:id="@+id/btn_get_code"
                        android:layout_width="@dimen/design_btn_width"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        widget:paper_shadow_color="@color/accent"
                        widget:paper_color="@color/accent"
                        widget:paper_text_color="@color/white"
                        widget:paper_text_size="@dimen/text_size_14"
                        widget:paper_text="@string/getcode"
                />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_item_height">

                <EditText
                        android:id="@+id/et_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nicknametip"
                        android:maxLength="15"
                        android:imeActionId="@+id/nickname"
                        android:imeActionLabel="昵称"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_item_height">

                <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passwordtip"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="密码"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_item_height">

                <EditText
                        android:id="@+id/et_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="确认密码"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <com.material.widget.PaperButton
                    android:id="@+id/btn_register"
                    android:layout_width="@dimen/design_btn_width"
                    android:layout_height="@dimen/design_btn_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    widget:paper_shadow_color="@color/accent"
                    widget:paper_color="@color/primary"
                    widget:paper_text_color="@color/white"
                    widget:paper_text_size="@dimen/text_size_16"
                    widget:paper_text="@string/register"
            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
